# gradstats_clone_CO0A

./: .gitignore  .gitmodules  README.md
BERT/: FusedAdamClipping.py  autoscaler.yaml  autoscaler_64kbase.yaml  autoscaler_momentum.yaml  autoscaler_p1.yaml  autoscaler_p2.yaml  bert_config_xlarge_height.json  bert_config_xlarge_width.json  run_pretraining.py  run_pretraining_nv_orig.py  schedulers.py  tensobard_logging_analysis_diverging_run.ipynb  timer.py  utils.py
Pytorch-UNet/: docker_sampler_exe.sh  docker_start.sh
autoscaler/: LICENSE  README.md  pyproject.toml  setup.py
autoscaler/src/automl/: autoscaler.py  config.py  path_utils.py
autoscaler/src/automl/optim/: _functional.py  adamw.py
cifar/: cifar.py  cifar_adascale.py  cifar_compression.py  trainer_ddp_amp.py
docker/: Dockerfile.bert.gpu  Dockerfile.gpu  Dockerfile.mrcnn.gpu  Dockerfile.resnet50.elastic.gpu  Dockerfile.resnet50.gpu  NOTES.md
eks/: bert_adascale_training_job.yaml  bert_adascale_training_job_4_node.yaml  bert_adascale_training_job_4_node_debug.yaml  bert_large_adascale_training_job_8_p316.yaml  bert_large_training_job_4_node.yaml  bert_large_training_job_8_p316.yaml  bert_sqr_cons_training_job.yaml  bert_training_job.yaml  bert_training_job_2_node.yaml  bert_training_job_4_node.yaml  cluster-g4dn-12xl.yaml  cluster-p316-us-east-1.yaml  cluster-p316-us-west-2.yaml  cluster.yaml  distributed.yaml  elastic-cluster-g4dn-12xl.yaml  mrcnn_adascale_training_job.yaml  mrcnn_training_job.yaml  nccl-efa-tests-p3dn.yaml  resnet50_adascale_training_job.yaml  resnet50_training_job.yaml  (+2 more)
(+215 files in other folders)
