[build-system]
requires = [
    "setuptools >= 42",
    "torch >= 1.6.0",
    "wheel >= 0.30.0"
]
build-backend = "setuptools.build_meta:__legacy__"

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.pytest_cache
  | build
  | docs
)/
'''

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
skip_glob = ["build/*"]
# Don't split "import" and "from".
force_sort_within_sections = true
known_third_party = ["numpy", "pytest", "recommonmark", "setuptools", "torch", "torch_pg", "torchtext", "torchvision"]
